--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mediasoup": "^3.19.3",
+    "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
+    "typeorm": "^0.3.27",
     "uuid": "^13.0.0"
   }
 }
