--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "dev": "nodemon index.js",
+  "start": "node index.js",
+
+  "typeorm": "typeorm",
+    "typeorm:generate": "typeorm migration:generate -d ./config/data-source.js ./migrations/AutoMigration",
+  "typeorm:run": "typeorm migration:run -d ./config/data-source.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
