--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "typeorm:run": "typeorm migration:run -d ./config/data-source.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
+    "@aws-sdk/s3-request-presigner": "^3.962.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
